--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="./estilo.css"/> 
 </head>
 <body>
+
+    <div id="cabecalho">
+        <h1>Notícias</h1> <!--Título da página-->
+    </div>
+
+    <div id="conteudo">
+        <div id="navbar">
+            <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./sobre.html">Sobre</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./saibamais.html">Saiba Mais</a></li>
+            </ul>
+        </div>
+    </div>
     
+
+
 </body>
 </html>
