--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="cabecalho">
-        <h1>Formulário</h1> <!--Título da página-->
+        <h1>Cadastro Pessoal</h1> <!--Título da página-->
     </div>
 
     <div id="container-menu">
@@ -26,12 +26,12 @@
                 <input type="text" name="sobrenome" id="sobrenome" placeholder="Digite seu sobrenome">
             </div>
 
-            <div class="telainteira">
+            <div class="meiatela spacing">
                 <label for="cpf">CPF</label>
                 <input type="text" name="cpf" id="cpf" placeholder="Digite o CPF">
             </div>
 
-            <div class="meiatela spacing">
+            <div class="meiatela">
                 <label for="rg">RG</label>
                 <input type="text" name="rg" id="rg" placeholder="Digite o RG">
             </div>
@@ -47,13 +47,53 @@
             </div>
 
             <div class="meiatela spacing">
+                <label for="cpf">Número</label>
+                <input type="text" name="numero" id="numero" placeholder="Digite o número">
+            </div>
+
+            <div class="meiatela">
+                <label for="bairro">Bairro</label>
+                <input type="text" name="bairro" id="bairro" placeholder="Digite o bairro">
+            </div>
+
+            <div class="meiatela spacing">
                 <label for="cidade">Cidade</label>
                 <input type="text" name="cidade" id="cidade" placeholder="Digite a cidade">
             </div>
 
             <div class="meiatela">
                 <label for="estado">Estado</label>
-                <input type="text" name="estado" id="estado" placeholder="Digite o estado">
+                <!--<input type="text" name="estado" id="estado" placeholder="Digite o estado">-->
+                <select name="state" id="state" />
+                    <option value="selecione">Selecione</option>
+                    <option value="AC">Acre</option>
+                    <option value="AL">Alagoas</option>
+                    <option value="AP">Amapá</option>
+                    <option value="AM">Amazonas</option>
+                    <option value="BA">Bahia</option>
+                    <option value="CE">Ceará</option>
+                    <option value="DF">Distrito Federal</option>
+                    <option value="ES">Espírito Santo</option>
+                    <option value="GO">Goiás</option>
+                    <option value="MA">Maranhão</option>
+                    <option value="MT">Mato Grosso</option>
+                    <option value="MS">Mato Grosso do Sul</option>
+                    <option value="MG">Minas Gerais</option>
+                    <option value="PA">Pará</option>
+                    <option value="PB">Paraíba</option>
+                    <option value="PR">Paraná</option>
+                    <option value="PE">Pernambuco</option>
+                    <option value="PI">Piauí</option>
+                    <option value="RJ">Rio de Janeiro</option>
+                    <option value="RN">Rio Grande do Norte</option>
+                    <option value="RS">Rio Grande do Sul</option>
+                    <option value="RO">Rondônia</option>
+                    <option value="RR">Roraima</option>
+                    <option value="SC">Santa Catarina</option>
+                    <option value="SP">São Paulo</option>
+                    <option value="SE">Sergipe</option>
+                    <option value="TO">Tocantins</option>
+                </select>
             </div>
 
             <div class="meiatela spacing">
@@ -64,6 +104,16 @@
             <div class="meiatela">
                 <label for="telfixo">Telefone Fixo</label>
                 <input type="text" name="telfixo" id="telfixo" placeholder="Digite número telefone fixo">
+            </div>
+
+            
+            <div class="meiatela">
+                <label for="Sexo">Sexo</label>
+                <select name="select" id="select">
+                    <option value="selecione" selected>Selecione</option>
+                    <option value="masculino">Masculino</option>
+                    <option value="feminino">Feminino</option>
+                </select>
             </div>
 
             <div class="telainteira">
@@ -80,25 +130,14 @@
                 <label for="confirmesenha">Confirme sua Senha</label>
                 <input type="password" name="confirmesenha" id="confirmesenha" placeholder="Confirme sua Senha">
             </div>
-            
-            <div class="meiatela">
-                <label for="rg">Selecione o sexo</label>    
-                <input type="radio" id="masculino" name="masculino" value="masculino">
-                <label for="masculino">Masculino</label>
-                <input type="radio" id="feminino" name="feminino" value="feminino">
-                <label for="feminino">Feminino</label>
-            </div>
 
-            <div>
-                <input type="checkbox" name="termo" id="termo">
-                <label for="termo" id="termo-label">Eu li os <a href="#"> termos de uso</a></label>
-            </div>
+
 
             <div id="telainteira">
                 <input id="btn-submit" type="submit" value="Registrar" >
             </div>
 
-        </form>
+        <form>
 
     </div>
    
