--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="cabecalho">
-        <h1>Cadastro Pessoal</h1> <!--Título da página-->
+        <h2>Cadastro Pessoal</h2> <!--Título da página-->
     </div>
 
     <div id="container-menu">
@@ -36,12 +36,12 @@
                 <input type="text" name="rg" id="rg" placeholder="Digite o RG">
             </div>
 
-            <div class="telainteira">
+            <div class="meiatela spacing">
                 <label for="rua">Endereço</label>
                 <input type="text" name="rua" id="rua" placeholder="Digite o nome da rua">
             </div>
 
-            <div class="telainteira">
+            <div class="meiatela">
                 <label for="complemento">Complemento</label>
                 <input type="text" name="complemento" id="complemento" placeholder="Digite o complemento">
             </div>
@@ -98,18 +98,18 @@
 
             <div class="meiatela spacing">
                 <label for="telcelular">Telefone Celular</label>
-                <input type="text" name="telcelular" id="telcelular" placeholder="Digite número telefone celular">
+                <input type="text" name="telcelular" id="telcelular" placeholder="(XX)XXXXX-XXXX">
             </div>
 
             <div class="meiatela">
                 <label for="telfixo">Telefone Fixo</label>
-                <input type="text" name="telfixo" id="telfixo" placeholder="Digite número telefone fixo">
+                <input type="text" name="telfixo" id="telfixo" placeholder="(XX)XXXX-XXXX">
             </div>
 
             
             <div class="meiatela">
                 <label for="Sexo">Sexo</label>
-                <select name="select" id="select">
+                <select name="sexo" id="sexo">
                     <option value="selecione" selected>Selecione</option>
                     <option value="masculino">Masculino</option>
                     <option value="feminino">Feminino</option>
