mais uma alteração

--- a/index.html
+++ b/index.html
@@ -128,10 +128,8 @@
 
             <div class="meiatela">
                 <label for="confirmesenha">Confirme sua Senha</label>
-                <input type="password" name="confirmesenha" id="confirmesenha" placeholder="Confirme sua Senha">
+                <input type="password" name="confirmesenha" id="confirmesenha" placeholder="Confirme sua Senha" data-equal=senha>
             </div>
-
-
 
             <div id="telainteira">
                 <input id="btn-submit" type="submit" value="Registrar" >
