--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flávio Judice</title>
-    <link rel="stylesheet" href="./estilo.css"/> 
-</head>
+    <link rel="stylesheet" href="./estilo.css"/>
+ </head>
 <body>
 
     <div id="cabecalho">
@@ -17,18 +17,18 @@
         <form id="formulario" action="">
 
             <div class="meiatela spacing">
-                <label for="nome">Nome</label>
+                <label for="nome">Nome *</label>
                 <input type="text" name="nome" id="nome" placeholder="Digite seu nome">
             </div>
 
             <div class="meiatela">
-                <label for="nome">Sobrenome</label>
+                <label for="nome">Sobrenome *</label>
                 <input type="text" name="sobrenome" id="sobrenome" placeholder="Digite seu sobrenome">
             </div>
 
             <div class="meiatela spacing">
-                <label for="cpf">CPF</label>
-                <input type="text" name="cpf" id="cpf" placeholder="Digite o CPF">
+                <label for="cpf">CPF *</label>
+                <input type="text" name="cpf" id="cpf" placeholder="Digite o CPF" onblur="validarCPF(this)">
             </div>
 
             <div class="meiatela">
@@ -37,18 +37,18 @@
             </div>
 
             <div class="meiatela spacing">
-                <label for="rua">Endereço</label>
+                <label for="rua">Endereço *</label>
                 <input type="text" name="rua" id="rua" placeholder="Digite o nome da rua">
             </div>
 
             <div class="meiatela">
-                <label for="complemento">Complemento</label>
-                <input type="text" name="complemento" id="complemento" placeholder="Digite o complemento">
+                <label for="cpf">Número *</label>
+                <input type="text" name="numero" id="numero" placeholder="Digite o número">
             </div>
 
             <div class="meiatela spacing">
-                <label for="cpf">Número</label>
-                <input type="text" name="numero" id="numero" placeholder="Digite o número">
+                <label for="complemento">Complemento</label>
+                <input type="text" name="complemento" id="complemento" placeholder="Digite o complemento">
             </div>
 
             <div class="meiatela">
@@ -97,7 +97,7 @@
             </div>
 
             <div class="meiatela spacing">
-                <label for="telcelular">Telefone Celular</label>
+                <label for="telcelular">Telefone Celular *</label>
                 <input type="text" name="telcelular" id="telcelular" placeholder="(XX)XXXXX-XXXX">
             </div>
 
@@ -131,16 +131,112 @@
                 <input type="password" name="confirmesenha" id="confirmesenha" placeholder="Confirme sua Senha" data-equal=senha>
             </div>
 
+            <!--<div id="telainteira">
+                <input id="btn-submit" type="submit" value="Registrar" onclick="validar()">
+            </div>-->
+
             <div id="telainteira">
-                <input id="btn-submit" type="submit" value="Registrar" >
+                <button type="button" class="botao" onclick="validar()">
+                Registrar
+                </button>
             </div>
 
         <form>
 
     </div>
    
-<p class="error-validation template"></p>
-<script src="scripts.js"></script>
+<!--<p class="error-validation template"></p>
+<script src="scripts.js"></script> -->
+
+
+<script>
+    function validar(){
+        var nome = formulario.nome
+        if(nome.value == ""){
+            alert("Nome não informado")
+            nome.focus();
+            return;
+        }
+
+        var sobrenome = formulario.sobrenome
+        if(sobrenome.value == ""){
+            alert("Sobrenome não informado")
+            sobrenome.focus();
+            return;
+        }
+
+        var cpf = formulario.cpf
+        if(cpf.value == ""){
+            alert("CPF não informado")
+            cpf.focus();
+            return;
+        }
+
+        var rua = formulario.rua
+        if(rua.value == ""){
+            alert("Endereço não informado")
+            rua.focus();
+            return;
+        }
+
+        var numero = formulario.numero
+        if(numero.value == ""){
+            alert("Número não informado")
+            numero.focus();
+            return;
+        }
+
+        var telcelular = formulario.telcelular
+        if(telcelular.value == ""){
+            alert("Telefone Celular não informado")
+            telcelular.focus();
+            return;
+        }
+    }
+
+
+    function validarCPF(el){
+    if( !_cpf(el.value) ){
+        alert("CPF inválido!" + el.value);
+        // apaga o valor
+        el.value = "";
+    }
+    }
+
+    function _cpf(cpf) {
+                cpf = cpf.replace(/[^\d]+/g, '');
+                if (cpf == '') return false;
+                if (cpf.length != 11 ||
+                    cpf == "00000000000" ||
+                    cpf == "11111111111" ||
+                    cpf == "22222222222" ||
+                    cpf == "33333333333" ||
+                    cpf == "44444444444" ||
+                    cpf == "55555555555" ||
+                    cpf == "66666666666" ||
+                    cpf == "77777777777" ||
+                    cpf == "88888888888" ||
+                    cpf == "99999999999")
+                    return false;
+                add = 0;
+                for (i = 0; i < 9; i++)
+                    add += parseInt(cpf.charAt(i)) * (10 - i);
+                    rev = 11 - (add % 11);
+                    if (rev == 10 || rev == 11)
+                        rev = 0;
+                    if (rev != parseInt(cpf.charAt(9)))
+                    return false;
+                add = 0;
+                for (i = 0; i < 10; i++)
+                    add += parseInt(cpf.charAt(i)) * (11 - i);
+                    rev = 11 - (add % 11);
+                    if (rev == 10 || rev == 11)
+                        rev = 0;
+                if (rev != parseInt(cpf.charAt(10)))
+                    return false;
+                return true;
+            }
+</script>
 
 </body>
 </html>
