alteração do código

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     </div>
 
     <div id="container-menu">
+        
+        <div id="aviso">
+            <h4>* - Campos Obrigatórios</h4>
+        </div>
+
         <form id="formulario" action="">
 
-            <div class="meiatela spacing">
+            <div class="meiatela spacing inicial">
                 <label for="nome">Nome *</label>
                 <input type="text" name="nome" id="nome" placeholder="Digite seu nome">
             </div>
@@ -121,6 +126,7 @@
                 <input type="text" name="email" id="email" placeholder="Digite o E-Mail">
             </div>
 
+            <!--
             <div class="meiatela spacing">
                 <label for="senha">Senha</label>
                 <input type="password" name="senha" id="senha" placeholder="Digite uma Senha">
@@ -130,24 +136,23 @@
                 <label for="confirmesenha">Confirme sua Senha</label>
                 <input type="password" name="confirmesenha" id="confirmesenha" placeholder="Confirme sua Senha" data-equal=senha>
             </div>
+            -->
 
-            <!--<div id="telainteira">
+            <div id="telainteira">
                 <input id="btn-submit" type="submit" value="Registrar" onclick="validar()">
-            </div>-->
+            </div>
 
+            <!--
             <div id="telainteira">
                 <button type="button" class="botao" onclick="validar()">
                 Registrar
                 </button>
-            </div>
+            </div>-->
 
         <form>
 
     </div>
    
-<!--<p class="error-validation template"></p>
-<script src="scripts.js"></script> -->
-
 
 <script>
     function validar(){
@@ -166,11 +171,11 @@
         }
 
         var cpf = formulario.cpf
-        if(cpf.value == ""){
+        if(cpf.value == ""){           
             alert("CPF não informado")
             cpf.focus();
             return;
-        }
+        }      
 
         var rua = formulario.rua
         if(rua.value == ""){
@@ -192,50 +197,10 @@
             telcelular.focus();
             return;
         }
+
     }
 
 
-    function validarCPF(el){
-    if( !_cpf(el.value) ){
-        alert("CPF inválido!" + el.value);
-        // apaga o valor
-        el.value = "";
-    }
-    }
-
-    function _cpf(cpf) {
-                cpf = cpf.replace(/[^\d]+/g, '');
-                if (cpf == '') return false;
-                if (cpf.length != 11 ||
-                    cpf == "00000000000" ||
-                    cpf == "11111111111" ||
-                    cpf == "22222222222" ||
-                    cpf == "33333333333" ||
-                    cpf == "44444444444" ||
-                    cpf == "55555555555" ||
-                    cpf == "66666666666" ||
-                    cpf == "77777777777" ||
-                    cpf == "88888888888" ||
-                    cpf == "99999999999")
-                    return false;
-                add = 0;
-                for (i = 0; i < 9; i++)
-                    add += parseInt(cpf.charAt(i)) * (10 - i);
-                    rev = 11 - (add % 11);
-                    if (rev == 10 || rev == 11)
-                        rev = 0;
-                    if (rev != parseInt(cpf.charAt(9)))
-                    return false;
-                add = 0;
-                for (i = 0; i < 10; i++)
-                    add += parseInt(cpf.charAt(i)) * (11 - i);
-                    rev = 11 - (add % 11);
-                    if (rev == 10 || rev == 11)
-                        rev = 0;
-                if (rev != parseInt(cpf.charAt(10)))
-                    return false;
-                return true;
-            }
 </script>
 
 </body>
